# Schnorr_Side_Channel

./: CMakeLists.txt  README.md  main.c  main_barret_mult.c  main_barret_reduction.c  main_our.c  main_ref.c  overhead.c
src/: barret.c  barret.h  barret_lib.h  size.h
src/barret_multiplication/: barret_multiplication.c  barret_multiplication.h
src/barret_reduction/: barret_reduction.c  barret_reduction.h
src/misc/: utils.c  utils.h
src/utils/: debug.c  debug.h  mod.c  mod.h
test/: main_barret_multiplication.c  main_barret_reduction.c
